[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/bearsum/walk3.png" type="Texture" id=1]
[ext_resource path="res://Sprites/bearsum/walk4.png" type="Texture" id=2]
[ext_resource path="res://Sprites/bearsum/walk2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/bearsum/walk1.png" type="Texture" id=4]
[ext_resource path="res://Minion.gd" type="Script" id=5]
[ext_resource path="res://Sprites/bearsum/roll2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/bearsum/hit3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/bearsum/hit2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/bearsum/hit1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/bearsum/smash-straight3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/bearsum/smash-straight1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/bearsum/smash-straight2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/bearsum/roll1.png" type="Texture" id=15]
[ext_resource path="res://Sprites/bearsum/static1.png" type="Texture" id=16]
[ext_resource path="res://Sprites/bearsum/static2.png" type="Texture" id=17]
[ext_resource path="res://Sprites/bearsum/alert1.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": false,
"name": "alert",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 12 ) ],
"loop": false,
"name": "shoot",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": false,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 18.3154
height = 23.9985

[node name="Minion" type="KinematicBody2D" groups=[
"enemies",
"minions",
]]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1.16, 0, 15.03, 1 )
frames = SubResource( 1 )
animation = "hit"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.629435, 0.25587 )
shape = SubResource( 2 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MeleeRayCast" type="RayCast2D" parent="."]
position = Vector2( 0, 1.935 )
enabled = true
cast_to = Vector2( 45, 0 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 45.3652, 3.5946 )

[node name="StaRegen" type="Timer" parent="."]
autostart = true

[node name="FloorRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 32 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animation_finished"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_Despawn_timeout"]
[connection signal="timeout" from="StaRegen" to="." method="_on_StaRegen_timeout"]
